# ideal-engine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  conanfile.py  naming-rules.txt
.github/workflows/: dev.yml  feature.yml  prod.yml
.github/workflows/modules/engine/lint/: action.yml
.github/workflows/modules/game/lint/: action.yml
.github/workflows/utils/setup-base-libs/: action.yml
.github/workflows/utils/setup-conan/: action.yml
cmake/: dependencies.cmake  executable.cmake  tests.cmake  utils.cmake  wind.cmake
cmake/unix/: compiler.cmake  cpack.cmake
cmake/wasm/: compiler.cmake  cpack.cmake
cmake/windows/: compiler.cmake  cpack.cmake
conan/profiles/linux/: default
conan/profiles/macos/: default  wasm
conan/profiles/windows/: default  wasm
editor/: CMakeLists.txt
editor/include/bindings/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h
editor/include/editor/: editor.hpp  logger.hpp  main.hpp
editor/include/editor/shared/: file-picker.hpp  menu-bar.hpp  menu-item.hpp  menu.hpp  popup.hpp  tab.hpp  tabs.hpp  window.hpp
editor/include/editor/shared/menu/: menu-item.hpp
editor/include/editor/shared/tab-bar/: tab-bar.hpp  tab-item.hpp  tab.hpp
editor/src/: main.cpp
editor/src/shared/: file-picker.cpp  menu-bar.cpp  menu-item.cpp  menu.cpp  popup.cpp  tab.cpp  tabs.cpp  window.cpp
editor/src/shared/menu/: menu-bar.cpp  menu-item.cpp  menu.cpp
editor/src/shared/tab-bar/: tab-bar.cpp  tab-item.cpp  tab.cpp
engine/: CMakeLists.txt
engine/asset-pipeline/asset-bundler/: CMakeLists.txt
engine/asset-pipeline/asset-bundler/include/asset-bundler/: asset-bundler-error.hpp  asset-bundler.hpp  consts.hpp
engine/asset-pipeline/asset-bundler/include/wind/asset-bundler/: consts.hpp
engine/asset-pipeline/asset-bundler/src/: asset-bundler.cpp  clear-cache.cpp  compile-directory.cpp  compile-file.cpp  export-directory.cpp  link-directory.cpp  main.cpp  preprocessing.cpp  processing.cpp
engine/asset-pipeline/asset-manager/: CMakeLists.txt
engine/asset-pipeline/asset-manager/include/asset-manager/: asset-manager.hpp
engine/asset-pipeline/asset-manager/include/wind/asset-manager/: asset-manager.hpp
engine/asset-pipeline/asset-manager/src/: asset-manager.cpp
engine/asset-pipeline/pipes/include/pipes/: copy-pipe.hpp  default-pipe.hpp  img-pipe.hpp  pipe.hpp  pipes-register.hpp  shader-pipe.hpp
engine/asset-pipeline/pipes/include/wind/pipes/: pipe.hpp
engine/entry/: CMakeLists.txt
engine/entry/include/wind/: wind.hpp
engine/entry/src/: wind.cpp
engine/input-system/: CMakeLists.txt
engine/input-system/include/input-system/: context.hpp  error.hpp  input-system.h  input-system.hpp  keyboard-context.h  keyboard-context.hpp  keys.h  keys.hpp  mouse-context.h  mouse-context.hpp  trigger.hpp
engine/input-system/include/wind/input-system/: context.hpp  input-system.hpp  keyboard-context.hpp  keys.hpp  mouse-context.hpp  trigger.hpp
engine/input-system/src/: input-system.cpp
engine/input-system/src/context/: keyboard-context.cpp  keys.cpp  mouse-context.cpp
engine/input-system/src/triggers/: grouped-triggers.cpp  keycode-triggers.cpp  trigger.cpp
engine/utils/: CMakeLists.txt
engine/utils/include/utils/: includes.hpp  utils.hpp  yaml-utils.hpp
engine/utils/include/wind/utils/: includes.hpp  utils.hpp
engine/utils/src/: utils.cpp
engine/window/: CMakeLists.txt
engine/window/include/wind/window/: window.hpp
engine/window/include/window/: window.h  window.hpp
engine/window/src/: window.cpp
game/: CMakeLists.txt
game/include/game/: logger.hpp
game/src/: main.cpp
tests/: CMakeLists.txt
tests/dev/: pnpm-lock.yaml
tests/game/: CMakeLists.txt  main.cpp
tools/: clear-ci-cache.sh  cmake-build.sh  cmake-configure.sh  conan-deploy.sh  conan-install.sh  cpack-build.sh  ctest.sh
wm/: add-script.sh  config.sh  wm
